<resources>
    <string name="app_name">Motohub</string>
    <string name="app_mail">hubmoto@yandex.ru</string>
    <string name="default_notification_channel_id">notification_channel</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_home">Event</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_find_pair">Find pair</string>
    <string name="title_profile">Profile</string>
    <string name="title_registration">Registration</string>
    <string name="title_select_moto">Enter the name of your motorcycle</string>
    <string name="title_new_pass">Create a password</string>
    <string name="title_authorization">Authorization</string>
    <string name="title_reset_password">Reset password</string>
    <string name="title_create_route">Creating route</string>
    <string name="title_group_card">Group</string>
    <string-array name="lang_list">
        <item code="EN">English</item>
        <item code="RU">Russian</item>
    </string-array>
    <string name="userLoginHint">Email</string>
    <string name="userPasswordHint">Password</string>
    <string name="userRememberText">Remember me</string>
    <string name="userNickName">Nickname</string>
    <string name="userBirthDate">birthday</string>
    <string name="userAge">age</string>
    <string name="userSex">sex</string>
    <string name="loginBtnText">Log In</string>
    <string name="loginBtnText2">Log in without registration</string>
    <string name="registerBtnText">Registration</string>
    <string name="saveBtn">Save</string>
    <string name="sex_list_m">Male</string>
    <string name="sex_list_f">Female</string>
    <string-array name="sex_list">
        <item code="M">Male</item>
        <item code="F">Female</item>
    </string-array>
    <string name="nav_event">Event</string>
    <string name="nav_group">Group</string>
    <string name="nav_news">Hub</string>
    <string name="nav_pair">Motopair</string>
    <string name="nav_route">Route</string>
    <string name="nav_route_all">All</string>
    <string name="nav_route_favorite">Favorite</string>
    <string name="nav_route_my">My</string>
    <string name="nav_msg">Chat</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_road_help">Roadside assistance</string>
    <string name="nav_tow_truck">Moto tow truck</string>
    <string name="nav_service">Services</string>
    <string name="nav_service_wait">A convenient service for finding motorcycle services will soon appear here. If you dont have the strength to wait and you want to use this service or place your motorcycle service, write to us:</string>
    <string name="nav_competition">Competitions</string>
    <string name="nav_competition_all">All</string>
    <string name="nav_competition_member">Member</string>
    <string name="nav_competition_my">Created</string>
    <string name="nav_study">Study</string>
    <string name="nav_study_wait">Soon there will be a convenient service for finding motorcycle schools and places where you can hone your skills. If you dont have the strength to wait and you want to use this service or post your services, write to us:</string>
    <string name="nav_shops">Shops</string>
    <string name="nav_shop_wait">A convenient service for finding motorcycle shops will soon appear here. If you dont have the strength to wait and you want to use this service or post your services, write to us:</string>
    <string name="nav_storage">Winter storage</string>
    <string name="nav_storage_wait">Soon there will be a convenient service for finding places where you can leave your motorcycles for storage. If you dont have the strength to wait and you want to use this service or post your services, write to us:</string>
    <string name="nav_subscribe">App subscription</string>
    <string name="nav_subscribe_wait">Soon there will be an opportunity to get advanced features of the application: remove ads, super likes in dating, additional filters when searching for routes or events. If you cannot wait and you want to use this service, write to us:</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_logout">Logout</string>
    <string name="lbl_about_app">About the app</string>
    <string name="nav_rating">Rating</string>
    <string name="nav_rating1">Kilometers</string>
    <string name="nav_rating2">Motorcycles</string>
    <string name="nav_feedback">Feedback</string>
    <string name="lbl_read_more">\nread more</string>
    <string name="lbl_read_less">less</string>
    <string name="lbl_yes">OK</string>
    <string name="lbl_you">You</string>
    <string name="lbl_you2">you</string>
    <string name="lbl_owner">Owner</string>
    <string name="lbl_admin">Administrator</string>
    <string name="lbl_admin2">Admin</string>
    <string name="lbl_first_name">First name</string>
    <string name="lbl_nick_name">Nick name</string>
    <string name="lbl_sex">Sex</string>
    <string name="lbl_birth_date">Birth date</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_birth">Birthday</string>
    <string name="lbl_about">About</string>
    <string name="lbl_about2">Tell us about yourself</string>
    <string name="lbl_havent_acc">No account?</string>
    <string name="lbl_restore_code">Enter your login as the email address you used when registering and we will send you a code to reset your password</string>
    <string name="lbl_restore_code2">Enter the password reset code that we sent to your email address</string>
    <string name="lbl_moto_brand">Brand</string>
    <string name="lbl_moto_model">Model</string>
    <string name="lbl_photo">Photo</string>
    <string name="lbl_find_nick_name">to search, enter the nickname</string>
    <string name="lbl_subscribe">Subscribe</string>
    <string name="lbl_unsubscribe">Unsubscribe</string>
    <string name="lbl_message">Message</string>
    <string name="lbl_route_name">Route name</string>
    <string name="lbl_route_about">Description</string>
    <string name="lbl_goto_yandex_map">Goto Yandex Maps</string>
    <string name="lbl_author">Author</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_exclude">Exclude</string>
    <string name="lbl_delete_confirm">Are you sure you want to delete the route?</string>
    <string name="lbl_delete_confirm2">Are you sure you want to delete a route point?</string>
    <string name="lbl_chat_empty">You dont have any messages yet</string>
    <string name="lbl_notification_empty">You dont have any notifications yet</string>
    <string name="lbl_create">Create</string>
    <string name="lbl_dating">Lets get acquainted</string>
    <string name="lbl_enter_message">Message</string>
    <string name="lbl_send">send</string>
    <string name="lbl_send2">Send</string>
    <string name="lbl_pair_distance"> km away from you</string>
    <string name="lbl_year_1">years</string>
    <string name="lbl_year_2">years</string>
    <string name="lbl_year_3">years</string>
    <string name="lbl_permission">Permission denied</string>
    <string name="lbl_permission2">Probably, when you first launched the application, you rejected the request for access to geolocation. Unfortunately, without these accesses, the application will not be able to function correctly. Set the permission to access geolocation in the phone settings.</string>
    <string name="lbl_select_moto">If you dont have a motorcycle, just skip this</string>
    <string name="lbl_not_find_pair1">This is not the end!</string>
    <string name="lbl_not_find_pair2">Our application is constantly updated by active users. You will be able to find more new acquaintances in the near future</string>
    <string name="lbl_popup_pair_fill_header">Fill out your profile information!</string>
    <string name="lbl_popup_pair_fill_body">To increase the likelihood of mutual likes, upload your real photo and fill in the information “about yourself” in the profile settings</string>
    <string name="lbl_popup_pair_goto">Proceed</string>
    <string name="lbl_complain_header">Why do you want to leave a complaint?</string>
    <string name="lbl_complain_header2">This is anonymous and will allow you to quickly moderate user content, excluding unacceptable publications.</string>
    <string name="lbl_complain_comment">Comment</string>
    <string name="lbl_personal_info">Personal info</string>
    <string name="lbl_moto_info">Motorcycle info</string>
    <string name="lbl_need_help_header1">Do you need help?</string>
    <string name="lbl_tow_truck_detail_9">Filters</string>
    <string name="lbl_tow_truck_detail_10">Around the clock</string>
    <string name="lbl_tow_truck_detail_11">On weekends</string>
    <string name="lbl_tow_truck_detail_12">My</string>
    <string name="lbl_tow_truck_detail_13">All</string>
    <string name="lbl_study_add9">Driving license</string>
    <string name="lbl_study_add10">Escort on the road</string>
    <string name="lbl_study_add11">Improving your skills</string>
    <string name="lbl_study_add12">Emergency courses</string>
    <string name="lbl_study_add13">Motocross</string>
    <string name="lbl_group_9">Add member</string>
    <string name="lbl_group_24">Select route</string>
    <string name="lbl_group_28">Administrators</string>
    <string name="lbl_group_39">Mute</string>
    <string name="lbl_group_40">Unmute</string>
    <string name="dynamic_version">Version %1$s</string>
    <string name="menu_complain">Complain</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_bookmark">Add to favorites</string>
    <string name="menu_undo_bookmark">Remove from favorites</string>
    <string name="menu_group_1">Leave group</string>
    <string name="menu_group_2">Edit</string>
    <string name="html_yandex_term"><a href="https://yandex.ru/legal/maps_termsofuse/?lang=en">Yandex.Maps Terms of Use</a></string>
    <string name="lic_1">CircleImageView\nCopyright 2014 - 2020 Henning Dodenhof\nLicensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n
\n
        http://www.apache.org/licenses/LICENSE-2.0\n
\nUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
        \n - - -</string>
    <string name="lic_2">ZoomLayout\nCopyright © 2020 Mattia Iavarone\nLicensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
\n
        http://www.apache.org/licenses/LICENSE-2.0\n
\nUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
        \n - - -</string>
    <string name="lic_3">Country Code Picker Library\nCopyright © 2016 Harsh Bhakta\nLicensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
\n
        http://www.apache.org/licenses/LICENSE-2.0\n
\nUnless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
        \n - - -</string>
</resources>