<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single"
        android:id="@+id/grp1">
        <item
            android:orderInCategory="1"
            android:id="@+id/nav_road_help"
            android:icon="@drawable/icon_road_help"
            android:contentDescription="@string/nav_road_help"
            android:title="@string/nav_road_help"/>
        <item
            android:orderInCategory="1"
            android:id="@+id/nav_tow_truck"
            android:icon="@drawable/icon_tow_truck"
            android:contentDescription="@string/nav_tow_truck"
            android:title="@string/nav_tow_truck"/>
        <item
            android:orderInCategory="1"
            android:id="@+id/nav_competition"
            android:icon="@drawable/icon_competition"
            android:contentDescription="@string/nav_competition"
            android:title="@string/nav_competition"/>
        <item
            android:orderInCategory="1"
            android:id="@+id/nav_study"
            android:icon="@drawable/icon_moto_model"
            android:contentDescription="@string/nav_study"
            android:title="@string/nav_study"/>
        <item
            android:orderInCategory="1"
            android:id="@+id/nav_rating_menu"
            android:icon="@drawable/icon_rating"
            android:contentDescription="@string/nav_rating"
            android:title="@string/nav_rating">
            <menu>
                <item
                    android:orderInCategory="1"
                    android:id="@+id/nav_rating"
                    android:icon="@drawable/icon_rating"
                    android:contentDescription="@string/nav_rating1"
                    android:title="@string/nav_rating1"/>
                <item
                    android:orderInCategory="1"
                    android:id="@+id/nav_rating_moto"
                    android:icon="@drawable/icon_rating"
                    android:contentDescription="@string/nav_rating2"
                    android:title="@string/nav_rating2"/>
            </menu>
        </item>
<!--        <item-->
<!--            android:id="@+id/nav_service"-->
<!--            android:icon="@drawable/icon_service"-->
<!--            android:contentDescription="@string/nav_service"-->
<!--            android:title="@string/nav_service"/>-->
<!--        <item-->
<!--            android:id="@+id/nav_shops"-->
<!--            android:icon="@drawable/icon_shop"-->
<!--            android:contentDescription="@string/nav_shops"-->
<!--            android:title="@string/nav_shops"/>-->
<!--        <item-->
<!--            android:id="@+id/nav_storage"-->
<!--            android:icon="@drawable/icon_winter_storage"-->
<!--            android:contentDescription="@string/nav_storage"-->
<!--            android:title="@string/nav_storage"/>-->
        <!--<item
            android:id="@+id/nav_subscribe"
            android:icon="@drawable/icon_subscribe"
            android:title="@string/nav_subscribe"/>-->
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/grp2">
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/icon_feedback"
            android:orderInCategory="2"
            android:contentDescription="@string/nav_feedback"
            android:title="@string/nav_feedback"
            app:showAsAction="never" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/icon_setting"
            android:orderInCategory="2"
            android:contentDescription="@string/nav_setting"
            android:title="@string/nav_setting"
            app:showAsAction="never" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:orderInCategory="2"
            android:contentDescription="@string/nav_logout"
            android:title="@string/nav_logout"
            app:showAsAction="never" />
    </group>
</menu>