<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.gilgamesh.abon.motot.ui.bottomNav.home.HomeFragment"
        android:label="@string/nav_event"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_route"
        android:name="ru.gilgamesh.abon.motot.ui.bottomNav.route.RouteFragment"
        android:label="@string/nav_route"
        tools:layout="@layout/fragment_route" />

    <fragment
        android:id="@+id/navigation_find_pair"
        android:name="ru.gilgamesh.abon.motot.ui.bottomNav.findPair.FindPairFragment"
        android:label="@string/nav_pair"
        tools:layout="@layout/fragment_find_pair" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="ru.gilgamesh.abon.motot.ui.bottomNav.chat.ChatFragment"
        android:label="@string/nav_msg"
        tools:layout="@layout/fragment_chat" />

    <!--<fragment
        android:id="@+id/navigation_profile"
        android:name="ru.gilgamesh.abon.motot.ui.bottomNav.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />-->
</navigation>