<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corner_5"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto"
                android:lineHeight="28sp"
                android:text="@string/lbl_tow_truck_detail_9"
                android:textColor="#FDF8FD"
                android:textFontWeight="500"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/cancel_img"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_close_24" />
        </LinearLayout>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/categoryAFlg_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/lbl_study_add9" />

            <com.google.android.material.chip.Chip
                android:id="@+id/escortRoadFlg_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/lbl_study_add10" />

            <com.google.android.material.chip.Chip
                android:id="@+id/improvingSkillFlg_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/lbl_study_add11" />

            <com.google.android.material.chip.Chip
                android:id="@+id/emergencyCoursesFlg_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/lbl_study_add12" />

            <com.google.android.material.chip.Chip
                android:id="@+id/motocrossFlg_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/lbl_study_add13"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/my_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/lbl_tow_truck_detail_12" />

            <com.google.android.material.chip.Chip
                android:id="@+id/all_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/lbl_tow_truck_detail_13" />
        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

</LinearLayout>