<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/bar_height_bottom"
    tools:context=".ui.sideNav.motoCompetition.MotoCompetitionFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/competition_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_competition_all" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_competition_member" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_competition_my" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/competition_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/competition_tab"
        android:layout_alignParentBottom="false" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/competitionCreate_fab"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:clickable="true"
        android:fontFamily="@font/roboto"
        android:text="@string/lbl_create"
        android:textColor="#FDF8FD"
        android:textFontWeight="600"
        android:theme="@style/Theme.MotoT.Fab"
        app:icon="@drawable/baseline_add_24_gray"
        app:iconTint="#FDF8FD" />

</RelativeLayout>